# stm32-cmake-qtcreator

./: README.md
example/blinkingLED/: CMakeLists.txt  Nucleo_Make.ioc  stm32f411xx.cmake
example/blinkingLED/Src/: main.c
